// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlledInput Snapshots should match snapshot for form 1`] = `
<RCTView>
  <RCTView>
    <RCTView
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        style={
          {
            "color": "#1A1A1A",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Email
      </RCTText>
      <RCTView
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E5E7EB",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTTextInput
          accessibilityLabel="Email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter email"
          placeholderTextColor="#9CA3AF"
          secureTextEntry={false}
          style={
            [
              {
                "color": "#1A1A1A",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              undefined,
              false,
            ]
          }
          testID="email-input"
          value=""
        />
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView>
    <RCTView
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        style={
          {
            "color": "#1A1A1A",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Password
      </RCTText>
      <RCTView
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E5E7EB",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTText
          color="#9CA3AF"
          name="lock-outline"
          size={20}
          style={
            {
              "marginRight": 12,
            }
          }
          testID="RCTText"
        >
          lock-outline
        </RCTText>
        <RCTTextInput
          accessibilityLabel="Password"
          autoCapitalize="none"
          autoCorrect={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter password"
          placeholderTextColor="#9CA3AF"
          secureTextEntry={true}
          style={
            [
              {
                "color": "#1A1A1A",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              {
                "paddingLeft": 0,
              },
              {
                "paddingRight": 0,
              },
            ]
          }
          testID="password-input"
          value=""
        />
        <RCTTouchableOpacity
          accessibilityLabel="Show password"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          aria-label="Show password"
          onPress={[Function]}
          style={
            {
              "marginLeft": 12,
              "padding": 4,
            }
          }
        >
          <RCTText
            color="#9CA3AF"
            name="eye"
            size={20}
            testID="RCTText"
          >
            eye
          </RCTText>
        </RCTTouchableOpacity>
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView>
    <RCTView
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        style={
          {
            "color": "#1A1A1A",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Username
      </RCTText>
      <RCTView
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E5E7EB",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTTextInput
          accessibilityLabel="Username"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter username"
          placeholderTextColor="#9CA3AF"
          secureTextEntry={false}
          style={
            [
              {
                "color": "#1A1A1A",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              undefined,
              false,
            ]
          }
          testID="username-input"
          value=""
        />
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView>
    <RCTView
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        style={
          {
            "color": "#1A1A1A",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Bio
      </RCTText>
      <RCTView
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E5E7EB",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTTextInput
          accessibilityLabel="Bio"
          multiline={true}
          numberOfLines={4}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Tell us about yourself"
          placeholderTextColor="#9CA3AF"
          secureTextEntry={false}
          style={
            [
              {
                "color": "#1A1A1A",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              undefined,
              false,
            ]
          }
          testID="bio-input"
          value=""
        />
      </RCTView>
    </RCTView>
  </RCTView>
</RCTView>
`;

exports[`ControlledInput Snapshots should match snapshot with values 1`] = `
<RCTView>
  <RCTView>
    <RCTView
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        style={
          {
            "color": "#1A1A1A",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Email
      </RCTText>
      <RCTView
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E5E7EB",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTTextInput
          accessibilityLabel="Email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter email"
          placeholderTextColor="#9CA3AF"
          secureTextEntry={false}
          style={
            [
              {
                "color": "#1A1A1A",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              undefined,
              false,
            ]
          }
          testID="email-input"
          value="test@example.com"
        />
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView>
    <RCTView
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        style={
          {
            "color": "#1A1A1A",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Password
      </RCTText>
      <RCTView
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E5E7EB",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTText
          color="#9CA3AF"
          name="lock-outline"
          size={20}
          style={
            {
              "marginRight": 12,
            }
          }
          testID="RCTText"
        >
          lock-outline
        </RCTText>
        <RCTTextInput
          accessibilityLabel="Password"
          autoCapitalize="none"
          autoCorrect={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter password"
          placeholderTextColor="#9CA3AF"
          secureTextEntry={true}
          style={
            [
              {
                "color": "#1A1A1A",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              {
                "paddingLeft": 0,
              },
              {
                "paddingRight": 0,
              },
            ]
          }
          testID="password-input"
          value=""
        />
        <RCTTouchableOpacity
          accessibilityLabel="Show password"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          aria-label="Show password"
          onPress={[Function]}
          style={
            {
              "marginLeft": 12,
              "padding": 4,
            }
          }
        >
          <RCTText
            color="#9CA3AF"
            name="eye"
            size={20}
            testID="RCTText"
          >
            eye
          </RCTText>
        </RCTTouchableOpacity>
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView>
    <RCTView
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        style={
          {
            "color": "#1A1A1A",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Username
      </RCTText>
      <RCTView
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E5E7EB",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTTextInput
          accessibilityLabel="Username"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter username"
          placeholderTextColor="#9CA3AF"
          secureTextEntry={false}
          style={
            [
              {
                "color": "#1A1A1A",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              undefined,
              false,
            ]
          }
          testID="username-input"
          value="testuser"
        />
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView>
    <RCTView
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        style={
          {
            "color": "#1A1A1A",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Bio
      </RCTText>
      <RCTView
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E5E7EB",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTTextInput
          accessibilityLabel="Bio"
          multiline={true}
          numberOfLines={4}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Tell us about yourself"
          placeholderTextColor="#9CA3AF"
          secureTextEntry={false}
          style={
            [
              {
                "color": "#1A1A1A",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              undefined,
              false,
            ]
          }
          testID="bio-input"
          value="Hello world"
        />
      </RCTView>
    </RCTView>
  </RCTView>
</RCTView>
`;
